# contest-env

./: .gitignore  CMakeLists.txt  run.template  submission.template  task.template
output/: main.cpp
testrunner/: main.cpp
